update CRUD sample User Management
