# docs/swagger.json
@@ -40,7 +40,7 @@
 				],
 				"type": "object"
 			},
-			"AuthRegisterRequest": {
+			"UserCreateRequest": {
 				"properties": {
 					"phone": {
 						"type": "string"
@@ -89,6 +89,78 @@
 					"phone",
 					"email",
 					"uid"
+				],
+				"type": "object"
+			},
+			"DataResponse_Array_UserModel__": {
+				"properties": {
+					"data": {
+						"items": {
+							"$ref": "#/components/schemas/UserModel"
+						},
+						"type": "array"
+					},
+					"status": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"data",
+					"status"
+				],
+				"type": "object"
+			},
+			"DataResponse_UserModel_": {
+				"properties": {
+					"data": {
+						"$ref": "#/components/schemas/UserModel"
+					},
+					"status": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"data",
+					"status"
+				],
+				"type": "object"
+			},
+			"UserUpdateRequest": {
+				"properties": {
+					"phone": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					}
+				},
+				"type": "object"
+			},
+			"AuthRegisterRequest": {
+				"properties": {
+					"phone": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"phone",
+					"password",
+					"email",
+					"name"
 				],
 				"type": "object"
 			},
@@ -153,9 +225,9 @@
 		}
 	},
 	"info": {
-		"title": "Docs API Tong Nyampah",
+		"title": "Docs API Template",
 		"version": "v1.0.0",
-		"termsOfService": "https://sendistudio.id/tos",
+		"termsOfService": "https://example.com/tos",
 		"contact": {
 			"name": "Sendi Aagustian",
 			"email": "sendiagustian.pk@gmail.com"
@@ -166,6 +238,218 @@
 		}
 	},
 	"paths": {
+		"/api/v1/user/create": {
+			"post": {
+				"operationId": "createUser",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/DataResponse_string_"
+										},
+										{
+											"$ref": "#/components/schemas/ErrorResponse"
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"User Management"
+				],
+				"security": [
+					{
+						"X-API-TOKEN": []
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UserCreateRequest"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/v1/user/all": {
+			"get": {
+				"operationId": "getUser",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/DataResponse_Array_UserModel__"
+										},
+										{
+											"$ref": "#/components/schemas/ErrorResponse"
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"User Management"
+				],
+				"security": [
+					{
+						"X-API-TOKEN": []
+					}
+				],
+				"parameters": []
+			}
+		},
+		"/api/v1/user/{uid}": {
+			"get": {
+				"operationId": "getUserById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/DataResponse_UserModel_"
+										},
+										{
+											"$ref": "#/components/schemas/ErrorResponse"
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"User Management"
+				],
+				"security": [
+					{
+						"X-API-TOKEN": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "uid",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/api/v1/user/update-data/{uid}": {
+			"put": {
+				"operationId": "updateUser",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/DataResponse_string_"
+										},
+										{
+											"$ref": "#/components/schemas/ErrorResponse"
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"User Management"
+				],
+				"security": [
+					{
+						"X-API-TOKEN": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "uid",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UserUpdateRequest"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/v1/user/delete/{uid}": {
+			"delete": {
+				"operationId": "deleteUser",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/DataResponse_string_"
+										},
+										{
+											"$ref": "#/components/schemas/ErrorResponse"
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"User Management"
+				],
+				"security": [
+					{
+						"X-API-TOKEN": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "uid",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/health-check": {
 			"get": {
 				"operationId": "GetMessage",
