# src/data/requests/user_request.ts
@@ -1,4 +1,11 @@
-export type UpdateUserRequest = {
+export type UserCreateRequest = {
+    name: string;
+    email: string;
+    password: string;
+    phone: string;
+};
+
+export type UserUpdateRequest = {
     name?: string;
     email?: string;
     phone?: string;
